trying to fix spacing of page labels with a transparent div block

--- a/styles.css
+++ b/styles.css
@@ -128,12 +128,19 @@ nav {
   margin: 40px 0px 5px 0px;
 }
 
+.empty_home {
+
+}
+
 .pg_label {
-  margin: 200px 40% 0px 40%;
   padding: 5px;
   text-align: center;
   background-color: white;
-  margin-top: 15%; /* This works for laptop screens; also affects formatting of cur_box */
+  margin: 15% 40% 0 40%; /* This works for laptop screens; also affects formatting of cur_box */
+}
+
+iframe {
+  margin: 5% 27%;
 }
 
 .empty {
